--- a/app.json
+++ b/app.json
@@ -2,6 +2,11 @@
   "expo": {
     "name": "UCF-Garage-Tracker",
     "slug": "UCF-Garage-Tracker",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "extra": {
+      "eas": {
+        "projectId": "8cb21b22-8126-41cb-8aef-88b449abe425"
+      }
+    }
   }
 }
