--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.8",
+    "expo-dev-client": "~4.0.14",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
-    "react-native-screens": "^3.31.1",
-    "expo-dev-client": "~4.0.14"
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
