--- a/eas.json
+++ b/eas.json
@@ -8,6 +8,9 @@
       "android": {
         "buildType": "apk"
         "image": "latest"
+      },
+      "ios": {
+        "image": "latest"
       }
     },
     "production": {
