--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,7 @@
     },
     "preview": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
         "image": "latest"
       },
       "ios": {
@@ -14,7 +14,7 @@
       }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
       "android": {
         "image": "latest"
       },
