--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~51.0.17",
-    "expo-dev-client": "~4.0.19",
+    "expo": "^51.0.0",
+    "expo-dev-client": "~4.0.27",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
