--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "android": {
       "package": "com.thomastrivino.ucfgaragetracker"
     },
+    "icon": "./assets/images/icon.png",  
     "splash": {
       "image": "./assets/images/splash.png",  
       "resizeMode": "contain",
