--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
       "eas": {
         "projectId": "8cb21b22-8126-41cb-8aef-88b449abe425"
       }
-    }
+    },
+    "owner": "thomastrivino" 
   }
 }
